A few more simplifications to example app